# Warehouse

./: CMakeLists.txt  Main.cpp  README.md  Warehouse.vcxproj  Warehouse.vcxproj.filters  input.txt  warehouse_m.cpp
doc/: instruction.md  requirements.md  sdd.md
include/: warehouse.h
poc/: Poc warehouse.cpp
src/: Main.cpp  output.txt  warehouse_m.cpp
test/: product_integration_tests.py  product_tests.cpp
